--- a/.env
+++ b/.env
@@ -8,3 +8,14 @@ LOGGER_ENCODING=json
 DB_DRIVER=postgres
 
 PG_URL=postgres://postgres:postgres@192.168.245.59:5432/music_db?sslmode=disable
+
+# NEW
+#############################################
+# PostgreSQL database environment variables
+#############################################
+DATABASE_HOST=database
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=music_db
+DATABASE_PORT=5432
+#########################END DOCKER-COMPOSE#########################
